@@ -1,3 +1,8 @@
+2008-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* ctype/ctype.h (__ctype_b_loc, __ctype_tolower_loc,
+	__ctype_toupper_loc): Add __THROW.
+
 2008-01-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Fix
